<resources>
    <string name="app_name">SmartAcesso Pedestre</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="label_hoje">Hoje</string>
    <string name="label_ontem">Ontem</string>
    <string name="title_sincronizacao_finalizada">Sincronizacao finalizada</string>
    <string name="title_activity_main">SmartAcesso Pedestre</string>
    <string name="msg_aguarde_sincronizacao">Aguarde enquanto procuro seus dados, isso pode levar alguns minutos...</string>
    <string name="title_sincronizando">Sincronizando dados...</string>
    <string name="msg_sincronizacao_completa_p1">Acesse o App </string>
    <string name="msg_sincronizacao_completa_p2"> e confira seus dados!</string>
    <string name="title_dados_segundo_plano">Dados do app em segundo plano</string>
    <string name="label_toque_detalhes">Toque para não exibir mais essa notificação</string>
    <string name="error_informe_cpf">Informe seu CPF</string>
    <string name="error_informe_senha">Informe sua senha</string>
    <string name="msg_alteracao_senha">Você receberá um e-mail para alterar sua senha</string>
    <string name="msg_senha_enviada_email">A alteração de senha já foi enviada. Favor verificar sua caixa de e-mail</string>
    <string name="msg_atencao">Atenção</string>
    <string name="msg_aguarde_procuro_dados">Aguarde enquanto procuro seus dados...</string>
    <string name="msgs_nao_encontrado">Usuario nao encontrado</string>
    <string name="titulo_ops">Ops...</string>
    <string name="login">Login</string>
    <string name="preencha_e_toque_no_bot_o_para_entrar">Preencha e toque no botão para entrar.</string>
    <string name="cpf">CPF</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="msg_duas_vezes">Toque no botão mais uma vez para sair!</string>
    <string name="refresh_title">Atualizar</string>
    <string name="error_informa_organizacao">Preenchimento obrigatório!</string>
    <string name="error_informa_login">Preenchimento obrigatório!</string>
    <string name="organizacao">Organização</string>
    <string name="configurar_servidor">Configurações</string>
    <string name="title_sair">Sair</string>
    <string name="title_atualizar">Atualizar</string>
    <string name="mensagem_nenhum_item_encontrado">Nenhum QRCode gerado ainda!</string>
    <string name="label_cpf">Documento informado</string>
    <string name="label_valor_cpf">000.000.000-00</string>
    <string name="label_toque_para_atualizar">Toque para atualizar</string>
    <string name="label_motorista">Pedestre</string>
    <string name="label_organizacao">Organização</string>
    <string name="label_valor_organizacao">SmartPonto</string>
    <string name="endereco_servidor">Endereço do servidor</string>
    <string name="endereco_servidor_explicacao">Endereço do servidor</string>
    <string name="cancelar">Voltar</string>
    <string name="confirmar">Confirmar</string>
    <string name="msgs_account_usuario_senha_invalida">Senha inválida!</string>
    <string name="msgs_account_usuario_nao_encontrado">Usuário não encontrado!</string>
    <string name="msgs_account_unidade_nao_encontrada">Organização não encontrada!</string>
    <string name="title_qrcode">QRCode</string>
    <string name="title_facial">Facial</string>
    <string name="mensagem_nenhum_item_encontrado_facial">Nenhuma requisição de cadastro facial existente.</string>
    <string name="cadastro_facial">Reconhecimento facial</string>
    <string name="label_status">Status</string>
    <string name="label_valor_status">AGUARDANDO CADATRO</string>
    <string name="label_data">Data cadastro</string>
    <string name="label_valor_data_cadastro">--/--/----</string>
    <string name="label_imagens">Capture as três fotos tocando sobre elas.</string>
    <string name="enviar">Enviar</string>
    <string name="label_foto_coletadas">Fotos coletadas. Clique sobre elas para ver!</string>
    <string name="msg_aguarde_envio_facial">Aguarde o envio...</string>
</resources>