<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="10dp"
              android:paddingLeft="24dp"
              android:paddingRight="24dp"
              android:paddingTop="10dp">

    <TextView
        android:id="@+id/msgAviso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/endereco_servidor_explicacao"
        android:lineSpacingExtra="0sp"
        android:textSize="12sp"
        android:layout_margin="2dp"
        android:textStyle="normal"/>

    <EditText
        android:id="@+id/endereco"
        style="@style/MaterialLightSubheadDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/endereco_servidor"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="end"
        android:orientation="horizontal">


        <Button
            android:id="@+id/cancelar"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"/>

        <Button
            android:id="@+id/confirmar"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmar" />

    </LinearLayout>


</LinearLayout>