<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.smartacesso.pedestre.activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="350dp"
                    android:layout_height="152dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_margin="30dp"
                    app:srcCompat="@drawable/logo_app" />

            </LinearLayout>

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                card_view:cardBackgroundColor="@color/card_branco"
                card_view:cardCornerRadius="@dimen/card_radius">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">


                    <TextView
                        android:id="@+id/textView"
                        style="@style/MaterialLightHeadline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login" />

                    <TextView
                        style="@style/MaterialLightBody1Secondary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/preencha_e_toque_no_bot_o_para_entrar" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <EditText
                            android:id="@+id/editTextOrganizacao"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:ems="10"
                            android:hint="@string/organizacao"
                            android:inputType="text" />

                        <EditText
                            android:id="@+id/editTextLogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:ems="10"
                            android:hint="@string/login"
                            android:inputType="text" />
                        </LinearLayout>
                    <EditText
                        android:id="@+id/editTextSenha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:ems="10"
                        android:hint="@string/senha"
                        android:inputType="textPassword" />

                    <Button
                        android:id="@+id/conecta"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/colorAccent"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/entrar"
                        android:textColor="#ffffff"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/configurarServidor"
                        style="@style/MaterialLightBody1Secondary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:clickable="true"
                        android:gravity="end"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"
                        android:text="@string/configurar_servidor" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
